--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,14 +8,16 @@ on:
 jobs:
 deploy_lambda:
 runs-on: ubuntu-latest
-steps:
 
+steps:
 - uses: actions/checkout@v3
 - uses: actions/setup-node@v3
- with:
-        node-version: 16
+  with:
+    node-version: 16
         - name: npm install
         env:
         CI: true
-run: |
-npm ci
+
+    cache: 'npm'
+- run: npm ci
+- run: npm test
