--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,13 +10,12 @@ deploy_lambda:
 runs-on: ubuntu-latest
 
 steps:
-- uses: actions/checkout@v3
-- uses: actions/setup-node@v3
+- uses: actions/checkout@v2
+- uses: actions/setup-node@v2
   with:
-    node-version: 16
+    node-version: '12'
+        - name: npm install
         env:
         CI: true
+run: npm ci
 
-    cache: 'npm'
-- run: npm ci
-- run: npm test
