--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,3 +17,9 @@ jobs:
         env:
           CI: true
         run: npm ci
+      - name: deploy
+      
+      # build /w ncc
+      # zip
+      # aws cli -deploy code
+        
