--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,8 @@ jobs:
           CI: true
         run: npm ci
       - name: deploy
-      
-      # build /w ncc
+      run: npx ncc build index.ts
+  
       # zip
       # aws cli -deploy code
         
