--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,13 +13,23 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '16'
+              - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-2
+
       - name: npm install
         env:
           CI: true
         run: npm ci
       - name: deploy
-      run: npx ncc build index.ts
-  
-      # zip
+      run: |
+      npx ncc build index.ts
+      zip -j deploy.zip ./dist/*
+      aws lambda update-function-code --function-name=lambda-gh-action --zip-file=fileb://deploy.zip
+
+    
       # aws cli -deploy code
         
